--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://g1-k.github.io/",
+  "homepage": "https://developerfolio.js.org/",
   "name": "developerfolio",
   "version": "0.1.0",
   "private": true,
@@ -7,16 +7,16 @@
     "colorthief": "^2.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "gh-pages": "^2.2.0",
+    "gh-pages": "^2.1.1",
     "jest-canvas-mock": "^2.3.1",
+    "lottie-react": "^2.4.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-easy-emoji": "^1.3.0",
+    "react-easy-emoji": "^1.8.1",
     "react-headroom": "^3.0.0",
-    "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
-    "react-scripts": "^5.0.0",
-    "react-test-renderer": "^17.0.2",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "^16.10.2",
     "react-twitter-embed": "3.0.3",
     "sass": "^1.32.8"
   },
@@ -24,7 +24,7 @@
     "predeploy": "npm run build",
     "start": "node fetch.js && react-scripts start",
     "build": "node fetch.js && react-scripts build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"./**/*.{js,css,json,scss}\"",
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "dotenv": "^8.2.0",
     "prettier": "^2.3.1"
   }
