--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://g1-k.github.io/",
-  "name": "developerfolio",
+  "name": "Jeevan K",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
