--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "DeveloperFolio",
-  "name": "DeveloperFolio",
+  "short_name": "Jeevan K",
+  "name": "Jeevan K",
   "icons": [
     {
       "src": "/favicon.ico",
